--- a/src/components/estate-object/estate-object.scss
+++ b/src/components/estate-object/estate-object.scss
@@ -1,29 +1,26 @@
+@import '../../common/variables';
+@import '../../common/mixins';
+
 .estate-object {
-  width: 100%;
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 0;
+  @include container();
 }
 
 .estate-object__header {
+  @include header();
+
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
-
-  margin-bottom: 15px;
-
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .estate-object__backward {
   padding-right: 15px;
 
-  transition: color 150ms;
-  transition: fill 150ms;
+  transition: $transition;
   text-decoration: none;
   text-transform: lowercase;
 
-  color: dodgerblue;
+  color: $color-link;
 
   font-size: 16px;
   font-weight: bold;
@@ -31,7 +28,7 @@
 
   &:hover,
   &:focus {
-    fill: tomato;
+    fill: $color-link-active;
   }
 
   .icon-back {
@@ -41,7 +38,7 @@
 }
 
 .estate-object__title {
-  margin: 10px 0;
+  margin: 0;
 }
 
 .estate-object__price {
@@ -74,6 +71,15 @@
 @media (max-width: 500px) {
   .estate-object__title {
     font-size: 18px;
+  }
+
+  .estate-object__backward {
+    padding-right: 10px;
+
+    .icon-back {
+      width: 15px;
+      height: 15px;
+    }
   }
 
   .estate-object__main-image-container {
