--- a/src/components/estate-list-item/estate-list-item.scss
+++ b/src/components/estate-list-item/estate-list-item.scss
@@ -1,5 +1,7 @@
+@import '../../common/variables';
+
 .estate-list-item {
-  transition: box-shadow 150ms;
+  transition: $transition;
 
   &:hover {
     box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.3);
@@ -27,14 +29,14 @@
 
   transition: color 150ms;
 
-  color: dodgerblue;
+  color: $color-link;
 
   font-size: 15px;
   font-weight: bold;
 
   .estate-list-item__wrap-link:hover &,
   .estate-list-item__wrap-link:focus & {
-    color: tomato;
+    color: $color-link-active;
   }
 }
 
