--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -1,13 +1,14 @@
+@import '../../common/variables';
+@import '../../common/mixins';
+
 .gallery {
   margin-bottom: 15px;
 }
 
 .gallery__main-image-container {
-  position: relative;
+  @include flexbox();
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 
   width: 100%;
   height: 400px;
@@ -24,16 +25,14 @@
 }
 
 .gallery__image-zoom {
+  @include flexbox();
+
   position: absolute;
   top: 50%;
   left: 50%;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   cursor: pointer;
-  transition: all 150ms;
+  transition: $transition;
   transform: translate(-50%, -50%);
 
   fill: rgba(255, 255, 255, 0.3);
@@ -49,18 +48,16 @@
 }
 
 .gallery__image-nav-btn {
+  @include flexbox();
+
   position: absolute;
   top: 0;
   bottom: 0;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   width: 40px;
 
   cursor: pointer;
-  transition: all 150ms;
+  transition: $transition;
 
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.1);
@@ -134,11 +131,9 @@
 }
 
 .gallery__modal-content {
-  position: relative;
+  @include flexbox();
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 
   width: 100%;
   max-width: 1000px;
@@ -147,19 +142,17 @@
 }
 
 .gallery__modal-close {
+  @include flexbox();
+
   position: absolute;
   top: 0;
   right: 0;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   width: 60px;
   height: 60px;
 
   cursor: pointer;
-  transition: all 150ms;
+  transition: $transition;
 
   fill: white;
 
@@ -174,18 +167,16 @@
 }
 
 .gallery__modal-nav-btn {
+  @include flexbox();
+
   position: absolute;
   top: 50%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   width: 60px;
   height: 60px;
 
   cursor: pointer;
-  transition: all 150ms;
+  transition: $transition;
   transform: translateY(-50%);
 
   fill: white;
